collapsed menu fix

--- a/src/components/layout/Menu/MenuLeft/style.module.scss
+++ b/src/components/layout/Menu/MenuLeft/style.module.scss
@@ -199,6 +199,13 @@
       }
     }
 
+    :global(.badge) {
+      position: absolute;
+      z-index: 1;
+      top: 3px;
+      right: 3px;
+    }
+
     .title,
     .name,
     .line,
